@@ -195,6 +195,7 @@ Vincent Delft
 Arnaud Delobelle
 Erik Demaine
 Roger Dev
+Catherine Devlin
 Raghuram Devarakonda
 Caleb Deveraux
 Toby Dickenson
